<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.huansheng.cloudcutter44.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.huansheng.cloudcutter44.ui.dashboard.DashboardFragment"
        android:label="@string/cp"
        tools:layout="@layout/product_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.huansheng.cloudcutter44.ui.notifications.NotificationsFragment"
        android:label="@string/wode"
        tools:layout="@layout/mine_fragment" />
</navigation>