<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical" android:padding="@dimen/padding" >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@mipmap/machine"/>

        <LinearLayout
            android:layout_marginTop="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical"  >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/speed" />
                <TextView
                    android:id="@+id/currentspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dp5"
                    android:textSize="@dimen/h7_5"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setsudu"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dp5"
                    android:textSize="@dimen/h7_5"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical"></LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical"  >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/force"/>
                <TextView
                    android:id="@+id/currentpressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dp5"
                    android:textSize="@dimen/h7_5"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daoya"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dp5"
                    android:textSize="@dimen/h7_5"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:orientation="vertical"></LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical"  >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/shike"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:text="@string/shike"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h7_5"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabhot"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="0"
                android:text="@string/remenxh"  />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/cyxh" />
        </com.google.android.material.tabs.TabLayout>
    <LinearLayout
        android:id="@+id/hotcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/padding" >
        <ListView
            android:id="@+id/hotlist"
            android:layout_width="match_parent"
            android:layout_height="400dp">
        </ListView>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/usecontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/padding" >

        <ListView
            android:id="@+id/uselist"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>

</LinearLayout>